# padel-services

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.dev.yaml  compose.staging.yaml  dev.backend.Dockerfile  go.mod  go.sum  start.development.sh  start.sh
.github/workflows/: golangci.yml
client/: eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: index.tsx  init.ts  mockEnv.ts
client/src/api/: createTournament.ts  retrieveTournament.ts  tournament.ts
client/src/components/: ActionList.tsx  App.tsx  AuthProvider.tsx  LoadingPage.tsx  Root.tsx  Section.tsx  StatusDivider.tsx
client/src/css/: classnames.ts
client/src/navigation/: routes.tsx
client/src/pages/: AvailableTournamentsPage.tsx  CreateTournamentPage.tsx  GenericErrorPage.tsx  ProtectedRoute.tsx  RetrieveTournamentPage.tsx  tournament.ts
cmd/tgbot/: main.go
cmd/tgminiapp/: allowedusers.go  main.go  telegramverification.go  tokenhandler.go
docs/: notes.md  poc-algorithm.py
docs/database/: entity_relationship.plantuml
internal/database/: createtournament.go  retrievetournament.go  retrieveusersandlogos.go
internal/services/: createtournament.go  createtournament_test.go  pdftournament.go  pdftournament_test.go
internal/services/templates/: template_group_schedule.html  template_rodeo_schedule.html
internal/tournament/: graph.go  rodeo.go  rodeo_factory.go  rodeo_factory_test.go  rodeo_test.go  rodeofactory.go  rodeofactory_test.go  singleplayerrodeo.go  singleplayerrodeofactory.go  singleplayerrodeofactory_test.go  team.go  tournament.go
padel-services/: .gitignore  go.mod  go.sum  start.sh
padel-services/cmd/tgbot/: main.go  state.go
padel-services/pkg/database/: createtournament.go  initialization.go  (+1 more)
padel-services/template/: style.css  template_schedule.html
pkg/database/: createtournament.go  retrievetournament.go  retrieveusersandlogos.go
pkg/services/: createtournament.go  pdftournament.go  pdftournament_test.go
pkg/tournament/: rodeo.go  rodeo_factory.go  rodeo_factory_test.go  team.go
resources/sql/: create_tables.sql
src/: .clang-format  .clang-tidy  .gitignore  meson.build
src/apps/: meson.build
src/apps/padel_tournament_maker/: meson.build  padel_tournament_maker.cpp  rodeo_maker.cpp  rodeo_maker.hpp  users_store.cpp  users_store.hpp
src/lib/: meson.build
src/lib/team/: meson.build  ordering.cpp  ordering.hpp  person.cpp  person.hpp  team.cpp  team.hpp
src/lib/tournament/: match.cpp  match.hpp  meson.build  rodeo.cpp  rodeo.hpp  rodeo_factory.cpp  rodeo_factory.hpp  tournament.cpp  tournament.hpp  tournament_factory.cpp  tournament_factory.hpp
src/subprojects/: tgbot-cpp.wrap
src/tests/: meson.build
src/tests/tournament/: meson.build  rodeo_factory_test.cpp
template/: style.css  template_schedule.html
(+22 files in other folders)
